--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,13 @@
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
   </head>
-  <body ng-app="departureStaticsApp">
+  <body id="ng-app" ng-app="departureStaticsApp">
     <!--[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+    <![endif]-->
+
+    <!--[if lte IE 8]>
+    <script src="libs/json2/json2.js"></script>
     <![endif]-->
 
     <!--[if lt IE 9]>
